# VKManager

./: CHANGELOG.md  LICENSE  README.md  VKManager.cabal  WFurem.cabal  bitbucket-pipelines.yml  devrun  project.clj  run
app/: Main.hs
doc/: intro.md
sql/: init.sql
src/: Collect.hs  DBInteract.hs  TReceiver.hs  Utils.hs
src/Internal/: Phones.hs  Utils.hs
src/Parser/: Handler.hs  Receiver.hs
src/Types/: DataBase.hs  Receive.hs
src/vkmanager/clj/: auth.clj  core.clj  data.clj  db.clj  parser.clj  utils.clj
src/vkmanager/clj/parser/: handler.clj  main.clj  receiver.clj
src/vkmanager/sql/: init.sql
src/wfurem/clj/: core.clj  data.clj  db.clj  utils.clj
src/wfurem/clj/parser/: handler.clj  main.clj  receiver.clj
test/vkmanager/: core_test.clj
test/vkmanager/clj/: auth_test.clj  core_test.clj  test.clj  utils_test.clj
