name:                VKManager
version:             0.1.1.0
-- synopsis:
-- description:
homepage:            https://bitbucket.org/errfrom/vk-manager
license:             MIT
license-file:        LICENSE
author:              Ivanov Dmitry
maintainer:          errfrom@yandex.ru
copyright:           2017 Ivanov Dmitry
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable VKManager-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , VKManager
                     , containers  
                     , wreq
                     , utf8-string
                     , aeson
  default-language:    Haskell2010

test-suite VKManager-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , VKManager
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://bitbucket.org/errfrom/vk-manager
