name:                WFurem
version:             0.1.2.0
-- synopsis:
-- description:
homepage:            https://github.com/errfrom/WFurem
license:             MIT
license-file:        LICENSE
author:              Ivanov Dmitry
maintainer:          errfrom@yandex.ru
copyright:           2017 Ivanov Dmitry
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parser.Receiver
                      ,Parser.Handler
                      ,Types.DataBase
                      ,Internal.Utils
                      ,Internal.Phones
                      ,Collect
                      ,DBInteract
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , wreq
                     , utf8-string
                     , aeson
                     , lens
                     , bytestring
                     , text
                     , lens-aeson
                     , vector
                     , unordered-containers
                     , regex-posix
                     , regex-compat
                     , optparse-applicative
                     , sqlite-simple
                     , directory
                     , filepath
                     , split
                     , http-client
                     , direct-sqlite
                     , unix
  default-language:    Haskell2010

executable VKManager-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , WFurem
                     , containers
                     , wreq
                     , utf8-string
                     , aeson
                     , lens
                     , bytestring
                     , text
                     , lens-aeson
                     , vector
                     , unordered-containers
                     , regex-posix
                     , regex-compat
                     , optparse-applicative
                     , sqlite-simple
                     , directory
                     , filepath
                     , split
                     , http-client
                     , direct-sqlite
                     , unix
  default-language:    Haskell2010

test-suite VKManager-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , WFurem
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/errfrom/WFurem
